--- a/add-student.html
+++ b/add-student.html
@@ -56,12 +56,6 @@
                                 </div>
                             </div>
                         </div>
-                        <script>
-                            function toggleDropdown(id) {
-                                const dropdown = document.getElementById(id);
-                                dropdown.classList.toggle('hidden');
-                            }
-                        </script>
                         <a href="#"
                             class="flex items-center gap-3 px-2 py-2  hover:bg-gray-100 hover:rounded hover:p-2 focus:bg-blue-100 focus:text-blue-600 focus:p-2"><i
                                 class="fas fa-dollar-sign"></i> Fees</a>
@@ -82,31 +76,11 @@
                         <button id="hamburger" class="text-2xl text-gray-700">☰</button>
                         <h1 class="text-xl font-bold">Dashboard</h1>
                     </div>
-                    <script>
-                        const sidebar = document.getElementById('sidebar');
-                        const hamburger = document.getElementById('hamburger');
 
 
-                        hamburger.addEventListener('click', function (event) {
-                            event.stopPropagation();
-                            sidebar.classList.toggle('-translate-x-full');
-                        });
-                        document.addEventListener('click', function (event) {
-                            if (
-                                window.innerWidth < 768 &&
-                                !sidebar.contains(event.target) &&
-                                !hamburger.contains(event.target)
-                            ) {
-                                sidebar.classList.add('-translate-x-full');
-                            }
-                        });
+                    
 
-                        window.addEventListener('resize', function () {
-                            if (window.innerWidth >= 768) {
-                                sidebar.classList.remove('-translate-x-full');
-                            }
-                        });
-                    </script>
+
             </div>
         </div>
         <div class="sm:col-span-9 md:col-span-8 lg:col-span-9 px-2">
@@ -209,23 +183,7 @@
             </div>
         </div>
     </div>
-    <script>
-        document.getElementById('cnic').addEventListener('input', function (e) {
-            let value = e.target.value.replace(/\D/g, '').slice(0, 13); // Digits only, max 13
-            let formatted = '';
-
-            if (value.length > 5) {
-                formatted = value.slice(0, 5) + '-' + value.slice(5, 12);
-                if (value.length > 12) {
-                    formatted += '-' + value.slice(12);
-                }
-            } else {
-                formatted = value;
-            }
-
-            e.target.value = formatted;
-        });
-    </script>
 </body>
+<script src="./assets/js/dashboard.js"></script>
 
 </html>
