--- a/fee-structure.html
+++ b/fee-structure.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./src/output.css">
     <title>Fees</title>
 </head>
-head>
 <body class="bg-gray-100 p-6">
     <div class="max-w-4xl mx-auto">
         <h1 class="text-2xl font-bold mb-6">Fees</h1>
