--- a/reset-password.html
+++ b/reset-password.html
@@ -1,33 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="./src/output.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reset Password</title>
-</head>
-<body class="min-h-screen flex items-center justify-center bg-gray-100 px-4">
-    <div class="w-full max-w-sm bg-white p-8 rounded-2xl shadow-lg">
-      <h2 class="text-2xl text-center mb-6 bg-gradient-to-r from-orange-400 to-orange-600 hover:from-orange-500 hover:to-orange-700 text-white font-semibold py-2 shadow-lg transform hover:scale-105 transition duration-300 ease-in-out">Change Password</h2>
-      <form action="" class="space-y-5">
+    <link rel="stylesheet" href="./src/output.css" />
+    <link rel="stylesheet" href="./assets/font-awesome/all.min.css" />
+  </head>
+  <body class="bg-gradient-to-r from-blue-100 to-blue-200 min-h-screen flex items-center justify-center px-4">
+
+    <div class="w-full max-w-sm min-h-[400px] bg-white rounded-2xl shadow-lg overflow-hidden flex flex-col justify-between">
+
+
+      <div class="bg-gradient-to-r from-blue-600 to-blue-700 p-6">
+        <h2 class="text-white text-2xl md:text-3xl font-bold text-center">Reset Password</h2>
+        <p class="text-blue-100 text-center mt-2 text-sm md:text-base">
+          We'll send you a link to reset your password
+        </p>
+      </div>
+
+     
+      <div class="p-6 flex flex-col justify-between flex-grow">
         <div>
-          <label for="userId" class="block text-sm font-medium text-gray-700 mb-1">Email</label>
-          <input type="text" id="email" name="email" placeholder="Enter your Email" required
-            class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-orange-500" />
-        </div>
-        <div>
-          <label for="password" class="block text-sm font-medium text-gray-700 mb-1">New Password</label>
-          <input type="password" id="password" name="password" placeholder="Enter your New Password" required
-            class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-orange-500" />
-        </div>
-        <div>
-            <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Confirm Password</label>
-            <input type="password" id="password" name="password" placeholder="Enter your Confirm Password" required
-              class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-orange-500" />
+          <label for="email" class="block mb-2 font-medium text-gray-700 text-sm md:text-base">Email Address</label>
+          <div class="flex items-center border rounded-lg px-3 py-2 mb-5">
+            <i class="fa-solid fa-envelope text-gray-500 text-sm"></i>
+            <input
+              type="email"
+              id="email"
+              placeholder="Enter your email"
+              class="w-full outline-none pl-2 text-sm md:text-base"
+            />
           </div>
-        <button type="submit" class="w-full bg-orange-300 hover:bg-black text-white font-semibold py-2 rounded-xl transition duration-300">Reset Password</button>
-      </form>
+
+          <a href="#" class="text-blue-600 text-sm hover:underline inline-flex items-center mb-6 mt-20 font-bold">
+            <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+            </svg>
+            Back to login
+          </a>
+        </div>
+
+        <button class="w-full bg-gradient-to-r from-blue-600 to-blue-700 text-white font-semibold py-3 rounded-lg hover:opacity-90 transition duration-200">
+          Send Reset Link
+        </button>
+      </div>
+
     </div>
-</body>
+
+  </body>
 </html>
+
+
+
+
+
+
+
+
