--- a/sign-in.html
+++ b/sign-in.html
@@ -1,29 +1,60 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="./src/output.css">
-    <title>Sign In</title>
-</head>
-<body class="min-h-screen flex items-center justify-center bg-gray-100 px-4">
-    <div class="w-full max-w-sm bg-white p-8 rounded-2xl shadow-lg">
-      <h2 class="text-2xl text-center mb-6 bg-gradient-to-r from-orange-400 to-orange-600 hover:from-orange-500 hover:to-orange-700 text-white font-semibold py-2 shadow-lg transform hover:scale-105 transition duration-300 ease-in-out">Sign In</h2>
-      <form action="" class="space-y-5">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login</title>
+    <link rel="stylesheet" href="./src/output.css" />
+  </head>
+  <body class="bg-gradient-to-r from-blue-100 to-blue-200 min-h-screen flex items-center justify-center px-4">
+    <div class="w-full max-w-md bg-white rounded-2xl shadow-lg overflow-hidden">
+     
+      <div class="bg-gradient-to-r from-blue-600 to-blue-800 p-6 text-center">
+        <h2 class="text-white text-2xl font-bold">Sign in</h2>
+        <p class="text-blue-100 text-sm mt-1">Sign in to access your account</p>
+      </div>
+
+     
+      <div class="p-6 space-y-4">
         <div>
-          <label for="userId" class="block text-sm font-medium text-gray-700 mb-1">User ID</label>
-          <input type="text" id="userId" name="userId" placeholder="Enter your User Id" required
-            class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-orange-500" />
+          <label for="email" class="block text-4x1 font-bold text-gray-700 mb-1">User name</label>
+          <div class="flex items-center border rounded-lg px-3 py-2">
+            <svg class="w-5 h-5 text-gray-400 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path d="M16 12h.01M12 12h.01M8 12h.01M21 12c0 4.418-4.03 8-9 8s-9-3.582-9-8 4.03-8 9-8 9 3.582 9 8z" />
+            </svg>
+            <input type="email" id="email" placeholder="Enter your  User name" class="w-full outline-none" />
+          </div>
         </div>
+
         <div>
-          <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Password</label>
-          <input type="password" id="password" name="password" placeholder="Enter your Password" required
-            class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-orange-500" />
+          <label for="password" class="blocktext-4x1 font-bold text-gray-700 mb-1">Password</label>
+          <div class="flex items-center border rounded-lg px-3 py-2">
+            <svg class="w-5 h-5 text-gray-400 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path d="M12 11c0-1.105-.895-2-2-2s-2 .895-2 2m4 0c0 1.105.895 2 2 2s2-.895 2-2m-4 0V7m4 4v4m-8 0v-4m-2 4v2h12v-2H6z" />
+            </svg>
+            <input type="password" id="password" placeholder="Enter your password" class="w-full outline-none" />
+            <svg class="w-5 h-5 text-gray-400 cursor-pointer" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+              <path d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-.147.514-.33 1.015-.542 1.5C20.267 16.057 16.477 19 12 19c-4.478 0-8.268-2.943-9.542-7z" />
+            </svg>
+          </div>
         </div>
-        <a href="forget-password.html" class="text-sm text-blue-600 hover:text-blue-800">Forgot Password?</a>
-        <button type="submit" class="w-full bg-orange-300 hover:bg-black text-white font-semibold py-2 rounded-xl transition duration-300">Sign In</button>
-      </form>
+
+        <div class="flex justify-between items-center text-sm mt-2">
+          <label class="flex items-center space-x-2">
+            <input type="checkbox" class="form-checkbox text-blue-700" />
+            <span>Remember me</span>
+          </label>
+          <a href="#" class="text-blue-700 hover:underline font-medium">Forgot your password?</a>
+        </div>
+
+        <button class="w-full bg-gradient-to-r from-blue-600 to-blue-800 text-white font-medium py-2 rounded-lg hover:opacity-90 transition">
+          Sign in
+        </button>
+      </div>
     </div>
-</body>
+  </body>
 </html>
+
