--- a/add-new-student.html
+++ b/add-new-student.html
@@ -12,8 +12,8 @@
 <body class="bg-gray-100">
     <div class="grid lg:grid-cols-12 md:grid-cols-12 sm:grid-cols-12 xl:grid-cols-12">
         <div class="lg:col-span-3 md:col-span-4 sm:col-span-3 xl:col-span-3">
-            <!-- <aside id="sidebar"
-            class="fixed z-40 top-0 left-0 w-64 h-full bg-gradient-to-b from-blue-600 to-blue-700 shadow-md text-white transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out"> 
+            <aside id="sidebar"
+            class="fixed z-40 top-0 left-0 w-[250px] lg:w-[260px] xl:w-[300px] h-full bg-gradient-to-b from-blue-600 to-blue-700 shadow-md text-white transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out"> 
                 <div class="flex items-center justify-between p-4 md:justify-center">
                     <h1 class="text-xl font-bold">AMS</h1>
                     <button id="closeSidebar" class="md:hidden">
@@ -24,7 +24,7 @@
                     </button>
                 </div>
                 <nav class="space-y-2 px-4">
-                    <a href="#" class="flex items-center gap-3 p-3 rounded-lg bg-blue-600 hover:bg-blue-500">
+                    <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
                             <path
                                 d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2h-4a2 2 0 0 1-2-2V12H9v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2z"
@@ -85,20 +85,8 @@
                         <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
                     </svg>
                 </button>
-            </div> -->
-
-
-
-
-            
-
-
-
+            </div>
         </div>
-
-
-
-        
         <div class="lg:col-span-9 md:col-span-8 sm:col-span-9 xl:col-span-9">
             <div class="p-3">
                 <div class="max-w-5xl mx-auto">
