--- a/sign-in.html
+++ b/sign-in.html
@@ -1,60 +1,64 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
-    <link rel="stylesheet" href="./src/output.css" />
-  </head>
-  <body class="bg-gradient-to-r from-blue-100 to-blue-200 min-h-screen flex items-center justify-center px-4">
-    <div class="w-full max-w-md bg-white rounded-2xl shadow-lg overflow-hidden">
-     
-      <div class="bg-gradient-to-r from-blue-600 to-blue-800 p-6 text-center">
-        <h2 class="text-white text-2xl font-bold">Sign in</h2>
-        <p class="text-blue-100 text-sm mt-1">Sign in to access your account</p>
-      </div>
 
-     
-      <div class="p-6 space-y-4">
-        <div>
-          <label for="email" class="block text-4x1 font-bold text-gray-700 mb-1">User name</label>
-          <div class="flex items-center border rounded-lg px-3 py-2">
-            <svg class="w-5 h-5 text-gray-400 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path d="M16 12h.01M12 12h.01M8 12h.01M21 12c0 4.418-4.03 8-9 8s-9-3.582-9-8 4.03-8 9-8 9 3.582 9 8z" />
-            </svg>
-            <input type="email" id="email" placeholder="Enter your  User name" class="w-full outline-none" />
-          </div>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sign in</title>
+  <link rel="stylesheet" href="./src/output.css" />
+  <link rel="stylesheet" href="./assets/font-awesome/all.min.css">
+</head>
 
-        <div>
-          <label for="password" class="blocktext-4x1 font-bold text-gray-700 mb-1">Password</label>
-          <div class="flex items-center border rounded-lg px-3 py-2">
-            <svg class="w-5 h-5 text-gray-400 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path d="M12 11c0-1.105-.895-2-2-2s-2 .895-2 2m4 0c0 1.105.895 2 2 2s2-.895 2-2m-4 0V7m4 4v4m-8 0v-4m-2 4v2h12v-2H6z" />
-            </svg>
-            <input type="password" id="password" placeholder="Enter your password" class="w-full outline-none" />
-            <svg class="w-5 h-5 text-gray-400 cursor-pointer" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-              <path d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-.147.514-.33 1.015-.542 1.5C20.267 16.057 16.477 19 12 19c-4.478 0-8.268-2.943-9.542-7z" />
-            </svg>
-          </div>
-        </div>
-
-        <div class="flex justify-between items-center text-sm mt-2">
-          <label class="flex items-center space-x-2">
-            <input type="checkbox" class="form-checkbox text-blue-700" />
-            <span>Remember me</span>
-          </label>
-          <a href="#" class="text-blue-700 hover:underline font-medium">Forgot your password?</a>
-        </div>
-
-        <button class="w-full bg-gradient-to-r from-blue-600 to-blue-800 text-white font-medium py-2 rounded-lg hover:opacity-90 transition">
-          Sign in
-        </button>
-      </div>
+<body class="bg-gradient-to-r from-blue-100 to-blue-200 min-h-screen flex items-center justify-center px-4">
+  <div class="w-full max-w-md bg-white rounded-2xl shadow-lg overflow-hidden">
+    <div class="bg-gradient-to-r from-blue-600 to-blue-800 p-6 text-center">
+      <h2 class="text-white text-2xl font-bold">Sign in</h2>
+      <p class="text-blue-100 text-sm mt-1">Sign in to access your account</p>
     </div>
-  </body>
-</html>
+    <div class="p-6 space-y-4">
+      <div>
+        <label for="email" class="block text-4x1 font-bold text-gray-700 mb-1">User ID</label>
+        <div class="flex items-center border rounded-lg px-3 py-2">
 
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-gray-400 relative right-1" fill="none" viewBox="0 0 24 24"
+            stroke="currentColor" stroke-width="1.5">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M15.75 6.75a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.5 20.25a8.25 8.25 0 0115 0" />
+          </svg>
+
+          <input type="email" id="email" placeholder="Enter Your ID" class="w-full outline-none" />
+        </div>
+      </div>
+      <div>
+        <label for="password" class="blocktext-4x1 font-bold text-gray-700 mb-1">Password</label>
+        <div class="flex items-center border rounded-lg px-3 py-2">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+            stroke="currentColor" class="w-5 h-5 text-gray-400 right-1 relative">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M16.5 10.5v-3a4.5 4.5 0 10-9 0v3m-.75 0h10.5a.75.75 0 01.75.75v8.25a.75.75 0 01-.75.75H6.75a.75.75 0 01-.75-.75V11.25a.75.75 0 01.75-.75z" />
+          </svg>
+          <input type="password" id="password" placeholder="Enter your password" class="w-full outline-none" />
+          <svg class="w-5 h-5 text-gray-400 cursor-pointer" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+            <path
+              d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-.147.514-.33 1.015-.542 1.5C20.267 16.057 16.477 19 12 19c-4.478 0-8.268-2.943-9.542-7z" />
+          </svg>
+        </div>
+      </div>
+
+      <div class="flex justify-between items-center text-sm mt-2">
+        <label class="flex items-center space-x-2">
+          <input type="checkbox" class="form-checkbox text-blue-700" />
+          <span>Remember me</span>
+        </label>
+        <a href="./forgot-password.html" class="text-blue-700 hover:underline font-medium">Forgot your password?</a>
+      </div>
+      <a href="#"
+        class="block text-center w-full bg-gradient-to-r from-blue-600 to-blue-800 text-white font-medium py-2 rounded-lg hover:opacity-90 transition">
+        Sign in
+      </a>
+    </div>
+  </div>
+</body>
+
+</html>
