--- a/mark-attendence.html
+++ b/mark-attendence.html
@@ -2,134 +2,160 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mark Attendence</title>
-    <link rel="stylesheet" href="./src/output.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mark Attendance</title>
+  <link rel="stylesheet" href="./src/output.css">
 </head>
 
-<body class="bg-gray-50">
-    <div class="grid grid-cols-12">
-        <div class="col-span-12 md:col-span-3 lg:col-span-3">
-            <aside id="sidebar"
-                class="fixed z-40 top-0 left-0 w-64 h-full bg-white shadow-md transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out">
-                <div class="p-4  font-bold uppercase border-b">AMS</div>
-                <nav class="p-4 flex flex-col gap-4">
-                    <a href="#"
-                        class="flex items-center gap-3 px-2 py-2  hover:bg-gray-100 hover:rounded hover:p-2 focus:bg-blue-100 focus:text-blue-600 focus:p-2"><i
-                            class="fas fa-home"></i> Dashboard</a>
-                    <div>
-                        <div>
-                            <div class="flex items-center gap-3  font-semibold cursor-pointer"
-                                onclick="toggleDropdown('attendanceDropdown')">
-                                <i class="fas fa-clipboard-check"></i>
-                                Attendance
-                            </div>
-                            <div id="attendanceDropdown" class="ml-8 mt-1 flex flex-col text-sm gap-1 hidden">
-                                <a href="#"
-                                    class="px-2 py-2  hover:bg-gray-100 hover:rounded hover:p-2 focus:bg-blue-100 focus:text-blue-600 focus:p-2">
-                                    Mark Attendance
-                                </a>
-                                <a href="#"
-                                    class="px-2 py-2  hover:bg-gray-100 hover:rounded hover:p-2 focus:bg-blue-100 focus:text-blue-600 focus:p-2">
-                                    Attendance Log
-                                </a>
-                            </div>
-                        </div>
-                        <div class="mt-4">
-                            <div class="flex items-center gap-3 text-gray-900 font-semibold cursor-pointer"
-                                onclick="toggleDropdown('leavesDropdown')">
-                                <i class="fa-solid fa-calendar-days"></i>
-                                Leaves
-                            </div>
-                            <div id="leavesDropdown" class="ml-8 mt-1 flex flex-col text-sm gap-1 hidden">
-                                <a href="#"
-                                    class=" px-2 py-2  hover:bg-gray-100 hover:rounded hover:p-2 focus:bg-blue-100 focus:text-blue-600 focus:p-2">
-                                    Apply Leave
-                                </a>
-                                <a href="#"
-                                    class="px-2 py-2  hover:bg-gray-100 hover:rounded hover:p-2 focus:bg-blue-100 focus:text-blue-600 focus:p-2">
-                                    Leave Records
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <script>
-                        function toggleDropdown(id) {
-                            const dropdown = document.getElementById(id);
-                            dropdown.classList.toggle('hidden');
-                        }
-                    </script>
-                    <a href="#"
-                        class="flex items-center gap-3 px-2 py-2  hover:bg-gray-100 hover:rounded hover:p-2 focus:bg-blue-100 focus:text-blue-600 focus:p-2"><i
-                            class="fas fa-dollar-sign"></i> Fees</a>
-                    <a href="#"
-                        class="flex items-center gap-3 px-2 py-2  hover:bg-gray-100 hover:rounded hover:p-2 focus:bg-blue-100 focus:text-blue-600 focus:p-2"><i
-                            class="fas fa-exclamation-circle"></i>
-                        Fines</a>
-                    <a href="#"
-                        class="flex items-center gap-3 px-2 py-2  hover:bg-gray-100 hover:rounded hover:p-2 focus:bg-blue-100 focus:text-blue-600 focus:p-2"><i
-                            class="fas fa-bell"></i> Notifications</a>
-                    <a href="#"
-                        class="flex items-center gap-3 px-2 py-2  hover:bg-gray-100 hover:rounded hover:p-2 focus:bg-blue-100 focus:text-blue-600 focus:p-2 text-red-500"><i
-                            class="fas fa-bell"></i> Sign Out</a>
-                </nav>
-            </aside>
-            <main class="flex-1 md:ml-64 p-4 transition-all duration-300 ease-in-out">
-
-                <div class="md:hidden flex items-center justify-between mb-4">
-                    <button id="hamburger" class="text-2xl text-gray-700">☰</button>
-                    <h1 class="text-xl font-bold">Dashboard</h1>
-                </div>
-        </div>
-        <script>
-            const sidebar = document.getElementById('sidebar');
-            const hamburger = document.getElementById('hamburger');
-            hamburger.addEventListener('click', function (event) {
-                event.stopPropagation();
-                sidebar.classList.toggle('-translate-x-full');
-            });
-            document.addEventListener('click', function (event) {
-                if (
-                    window.innerWidth < 768 &&
-                    !sidebar.contains(event.target) &&
-                    !hamburger.contains(event.target)
-                ) {
-                    sidebar.classList.add('-translate-x-full');
-                }
-            });
-            window.addEventListener('resize', function () {
-                if (window.innerWidth >= 768) {
-                    sidebar.classList.remove('-translate-x-full');
-                }
-            });
-        </script>
-        <div class="col-span-12 md:col-span-9 lg:col-span-9 bg-white h-72 md:mx-8  p-5 md:mt-28 shadow-lg rounded-2xl">
-            <div class="grid grid-cols-12">
-                <div class="col-span-12 ">
-                    <h2 class="text-xl font-semibold">Attendance / Manual Entry</h2>
-                    <hr class="mt-3 text-gray-300">
-                </div>
-                <div class="col-span-12 mt-3">
-                    <input type="date" class="text-gray-400">
-                </div>
-                <div class="col-span-6 mt-9">
-                    <input type="checkbox" id="timeIn" />
-                    <label for="timeIn" class="text-sm">Time In</label>
-                    <input type="text" class="px-3 py-2 border border-gray-400 rounded-md w-32" placeholder="8:00 PM" />
-                </div>
-                <div class="col-span-6 mt-9">
-                    <input type="checkbox" id="timeOut" />
-                    <label for="timeOut" class="text-sm">Time Out</label>
-                    <input type="text" class="px-3 py-2 border border-gray-400 rounded-md w-32" placeholder="8:00 PM" />
-                </div>
-                <div class="col-span-12 mt-6 text-center">
-                    <button class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-600">Submit</button>
-                    <button class="bg-red-500 text-white px-6 py-2 rounded hover:bg-red-500">Cancel</button>
-                </div>
-            </div>
-        </div>
+<body class="bg-gray-100">
+  <nav class="bg-white shadow px-4 py-3 flex justify-between items-center">
+    <div class="md:ml-64 relative top-2">
+      <button id="openSidebar" class="md:hidden mb-4">
+        <svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
     </div>
+    <div class="relative">
+      <input type="checkbox" id="dropdown-toggle" class="peer hidden">
+      <label for="dropdown-toggle"
+        class="flex items-center gap-2 cursor-pointer bg-blue-100 text-sm rounded-full px-3 py-1.5 hover:bg-blue-200">
+        <svg class="w-6 h-6 text-blue-600" fill="currentColor" viewBox="0 0 20 20">
+          <path d="M10 10a4 4 0 100-8 4 4 0 000 8zM2 18a8 8 0 0116 0H2z" />
+        </svg>
+        <span class="text-gray-700 font-medium">John Doe</span>
+        <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+      </label>
+      <div
+        class="absolute right-0 mt-2 w-48 bg-white rounded-md shadow-lg py-2 z-20 border border-gray-100 hidden peer-checked:block">
+        <a href="./user-profile.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Your Profile</a>
+        <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Settings</a>
+        <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100 flex items-center gap-2">
+          <svg class="w-4 h-4 text-gray-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path d="M17 16l4-4m0 0l-4-4m4 4H7" stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
+          Sign out
+        </a>
+      </div>
+    </div>
+  </nav>
+  <div class="grid lg:grid-cols-12 md:grid-cols-12 sm:grid-cols-12 xl:grid-cols-12">
+    <div class="lg:col-span-3 md:col-span-4 sm:col-span-3 xl:col-span-3">
+      <aside id="sidebar"
+        class="fixed z-40 top-0 left-0 xl:w-80 lg:w-72 md:w-60 h-full bg-gradient-to-b from-blue-600 to-blue-700 shadow-md text-white transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out">
+        <div class="flex items-center justify-between p-4 md:justify-center">
+          <h1 class="text-xl font-bold  ">AMS</h1>
+          <button id="closeSidebar" class="md:hidden">
+            <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+            </svg>
+          </button>
+        </div>
+        <nav class="space-y-2 px-4 text-center">
+          <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+              <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2h-4a2 2 0 0 1-2-2V12H9v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2z"
+                stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            Dashboard
+          </a>
+          <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+              <path d="M8 7V3M16 7V3M4 11h16M5 19h14" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            Attendance
+          </a>
+          <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+              <path d="M9 12h6M9 16h6M9 8h6M7 4h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2z"
+                stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            Leaves
+          </a>
+          <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+              <path d="M17 9V7a4 4 0 0 0-8 0v2m-4 0h16v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V9z" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+            Fees
+          </a>
+          <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+              <path d="M12 9v2m0 4h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0z" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+            Fines
+          </a>
+          <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+              <path
+                d="M15 17h5l-1.405-1.405M19 13V7a2 2 0 0 0-2-2h-4.586A2 2 0 0 0 11 4.586l-6.707 6.707A1 1 0 0 0 4 12v5a2 2 0 0 0 2 2h5.586a1 1 0 0 0 .707-.293L15 17z"
+                stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            Notifications
+          </a>
+          <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+              <path d="M18 9a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM13.5 14H6a2 2 0 0 0-2 2v1h9.5m1.5 0h5m-2.5-2.5V19"
+                stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            Add Student
+          </a>
+        </nav>
+      </aside>
+    </div>
+    <div class="lg:col-span-9 md:col-span-8 sm:col-span-9 xl:col-span-9">
+      <div class="p-3">
+        <div class="max-w-5x mx-auto">
+          <div class="bg-blue-600 text-white p-6 rounded-lg shadow-sm">
+            <h1 class="text-2xl font-bold">Mark Your Attendance</h1>
+          </div>
+          <div class="grid grid-cols-12">
+            <div class="col-span-12">
+              <form class="bg-white shadow-lg p-5 rounded-lg mt-8">
+                <div class="mt-10">
+                  <label for="date" class="block text-sm font-medium text-gray-700">Date</label>
+                  <input type="date"
+                    class="mt-1 block w-full rounded-md border border-gray-300 px-3 py-2 shadow-sm focus:border-indigo-500 focus:ring-indigo-500">
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-8">
+                  <div>
+                    <label for="checkIn" class="block text-sm font-medium text-gray-700">Check In Time</label>
+                    <input type="time" id="checkIn"
+                      class="mt-2 block w-full rounded-md  border border-gray-300 px-3 py-2 shadow-sm focus:border-blue-500 focus:ring-blue-500">
+                  </div>
+                  <div>
+                    <label for="checkOut" class="block text-sm font-medium text-gray-700">Check Out Time</label>
+                    <input type="time" id="checkOut"
+                      class="mt-2 block w-full rounded-md border border-gray-300 px-3 py-2 shadow-sm focus:border-blue-500 focus:ring-blue-500">
+                  </div>
+                </div>
+                <div class="mt-8">
+                  <label for="notes" class="block text-sm font-medium text-gray-700">Notes (Optional)</label>
+                  <textarea id="notes" rows="3"
+                    class=" block mt-2 w-full rounded-md border border-gray-300 px-3 py-2 shadow-sm focus:border-indigo-500 focus:ring-indigo-500"
+                    placeholder="Add any additional notes..."></textarea>
+                </div>
+                <div>
+                  <div>
+                    <button type="button"
+                      class="border bg-gray-300 p-2 px-5 rounded-lg mt-5 hover:bg-slate-400">Cancel</button>
+                    <button type="button"
+                      class="border bg-blue-500 text-white p-2 px-5 rounded-lg mt-5 hover:bg-blue-600">Save
+                      Attendance</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+<script src="./assets/js/profile.js"></script>
 
 </html>
