--- a/attendance-record-document.html
+++ b/attendance-record-document.html
@@ -124,7 +124,7 @@
           <p class="text-lg font-semibold">7</p>
         </div>
         <div>
-          <p class="text-gray-500">Early Departure Days:</p>
+          <p class="text-gray-500">Absent Days:</p>
           <p class="text-lg font-semibold">1</p>
         </div>
       </div>
