--- a/add-new-student.html
+++ b/add-new-student.html
@@ -10,82 +10,152 @@
 </head>
 
 <body class="bg-gray-100">
+    <input type="checkbox" id="signout-modal-toggle" class="hidden peer" />
+  <nav class="bg-white shadow px-4 py-3 flex justify-between items-center">
+    <div class="md:ml-64 relative top-2">
+      <button id="openSidebar" class="md:hidden mb-4">
+        <svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
+    </div>
+    <div class="relative">
+      <input type="checkbox" id="dropdown-toggle" class="peer hidden">
+      <label for="dropdown-toggle"
+        class="flex items-center gap-2 cursor-pointer bg-blue-100 text-sm rounded-full px-3 py-1.5 hover:bg-blue-200">
+        <svg class="w-6 h-6 text-blue-600" fill="currentColor" viewBox="0 0 20 20">
+          <path d="M10 10a4 4 0 100-8 4 4 0 000 8zM2 18a8 8 0 0116 0H2z" />
+        </svg>
+        <span class="text-gray-700 font-semibold">User</span>
+        <svg class="w-4 h-4 text-gray-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+      </label>
+      <div
+        class="absolute right-0 mt-2 w-48 bg-white rounded-md shadow-lg py-2 z-20 border border-gray-100 hidden peer-checked:block">
+        <a href="./user-profile.html" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Your Profile</a>
+        <a href="#" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Settings</a>
+        <label for="signout-modal-toggle"
+          class="px-3 py-2 text-red-600 hover:bg-gray-100 flex items-center gap-1 cursor-pointer">
+          <svg class="w-6 h-6 " fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a2 2 0 01-2 2H5a2 2 0 01-2-2V7a2 2 0 012-2h6a2 2 0 012 2v1"
+              stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
+          Sign out
+        </label>
+      </div>
+    </div>
+  </nav>
+  <div class="fixed inset-0 z-50 hidden peer-checked:flex items-center justify-center bg-black bg-opacity-50">
+    <div class="bg-white rounded-lg shadow-xl max-w-sm w-full mx-4 p-6">
+      <h2 class="text-lg font-semibold text-gray-800 mb-4">Confirm Sign Out</h2>
+      <p class="text-gray-600 mb-6">Are you sure you want to sign out?</p>
+      <div class="flex justify-end gap-3">
+        <label for="signout-modal-toggle"
+          class="px-4 py-2 bg-gray-200 text-gray-700 rounded hover:bg-gray-300 cursor-pointer">Cancel</label>
+        <a href="./sign-in.html" class="px-4 py-2 bg-red-500 text-white rounded hover:bg-red-900">Sign
+          Out</a>
+      </div>
+    </div>
+  </div>
     <div class="grid lg:grid-cols-12 md:grid-cols-12 sm:grid-cols-12 xl:grid-cols-12">
         <div class="lg:col-span-3 md:col-span-4 sm:col-span-3 xl:col-span-3">
             <aside id="sidebar"
-            class="fixed z-40 top-0 left-0 w-[250px] lg:w-[260px] xl:w-[300px] h-full bg-gradient-to-b from-blue-600 to-blue-700 shadow-md text-white transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out"> 
-                <div class="flex items-center justify-between p-4 md:justify-center">
-                    <h1 class="text-xl font-bold">AMS</h1>
-                    <button id="closeSidebar" class="md:hidden">
-                        <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" stroke-width="2"
-                            viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-                        </svg>
-                    </button>
-                </div>
-                <nav class="space-y-2 px-4">
-                    <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-                            <path
-                                d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2h-4a2 2 0 0 1-2-2V12H9v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2z"
-                                stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                        Dashboard
-                    </a>
-                    <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-                            <path d="M8 7V3M16 7V3M4 11h16M5 19h14" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                        Attendance
-                    </a>
-                    <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-                            <path
-                                d="M9 12h6M9 16h6M9 8h6M7 4h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2z"
-                                stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                        Leaves
-                    </a>
-                    <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-                            <path d="M17 9V7a4 4 0 0 0-8 0v2m-4 0h16v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V9z"
-                                stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                        Fees
-                    </a>
-                    <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-                            <path d="M12 9v2m0 4h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0z" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                        </svg>
-                        Fines
-                    </a>
-                    <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-                            <path
-                                d="M15 17h5l-1.405-1.405M19 13V7a2 2 0 0 0-2-2h-4.586A2 2 0 0 0 11 4.586l-6.707 6.707A1 1 0 0 0 4 12v5a2 2 0 0 0 2 2h5.586a1 1 0 0 0 .707-.293L15 17z"
-                                stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                        Notifications
-                    </a>
-                    <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
-                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
-                            <path
-                                d="M18 9a3 3 0 1 1-6 0 3 3 0 0 1 6 0zM13.5 14H6a2 2 0 0 0-2 2v1h9.5m1.5 0h5m-2.5-2.5V19"
-                                stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                        Add Student
-                    </a>
-                </nav>
-            </aside>
-            <div class="md:ml-64 p-4">
-                <button id="openSidebar" class="md:hidden mb-4">
-                    <svg class="w-6 h-6 text-blue-700" fill="none" stroke="currentColor" stroke-width="2"
-                        viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
-                    </svg>
-                </button>
+            class="fixed z-40 top-0 left-0 w-64 xl:w-80 md:w-64 h-full bg-gradient-to-b from-blue-700 to-blue-800 shadow-md text-white transform -translate-x-full md:translate-x-0 transition-transform duration-300 ease-in-out">
+            <div class="flex items-center justify-between p-4 md:justify-center">
+              <h1 class="text-xl font-bold">AMS</h1>
+              <button id="closeSidebar" class="md:hidden">
+                <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+              </button>
             </div>
+            <nav class="space-y-2 px-4 text-center">
+              <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+                  <path d="M3 10l9-7 9 7v8a2 2 0 0 1-2 2h-4a2 2 0 0 1-2-2v-4H9v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-8z"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+                Dashboard
+              </a>
+              <div class="relative">
+                <button onclick="toggleDropdown('attendanceDropdown')"
+                  class="flex items-center justify-between w-full gap-3 p-3 rounded-lg hover:bg-blue-500">
+                  <div class="flex items-center gap-3">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+                      <path
+                        d="M8 7V3m8 4V3m-9 8h10m-12 8h14a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2z"
+                        stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                    Attendance
+                  </div>
+                  <svg class="w-4 h-4 transition-transform" id="attendanceIcon" fill="none" stroke="currentColor"
+                    viewBox="0 0 24 24" stroke-width="2">
+                    <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" />
+                  </svg>
+                </button>
+                <div id="attendanceDropdown" class="hidden flex-col mt-2 bg-blue-800">
+                  <a href="#" class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Mark
+                    Attendance</a>
+                  <a href="#" class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Attendance
+                    Record</a>
+                </div>
+              </div>
+              <div class="relative">
+                <button onclick="toggleDropdown('leavesDropdown')"
+                  class="flex items-center justify-between w-full gap-3 p-3 rounded-lg hover:bg-blue-500">
+                  <div class="flex items-center gap-3">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+                      <path
+                        d="M9 5h6a2 2 0 0 1 2 2v0a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V9a2 2 0 0 1 2-2v0a2 2 0 0 1 2-2z"
+                        stroke-linecap="round" stroke-linejoin="round" />
+                      <path d="M9 14h6m-6-4h6" stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                    Leaves
+                  </div>
+                  <svg class="w-4 h-4 transition-transform" id="leavesIcon" fill="none" stroke="currentColor"
+                    viewBox="0 0 24 24" stroke-width="2">
+                    <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" />
+                  </svg>
+                </button>
+                <div id="leavesDropdown" class="hidden flex-col mt-2 bg-blue-800">
+                  <a href="#" class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Apply for
+                    Leave</a>
+                  <a href="#" class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Leave
+                    Record</a>
+                </div>
+              </div>
+              <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+                  <path d="M2 7h20M2 10h20M4 17h4m6 0h6a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2z"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+                Fees
+              </a>
+              <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+                  <path
+                    d="M12 9v2m0 4h.01M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+                Fines
+              </a>
+              <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+                  <path
+                    d="M15 17h5l-1.41-1.41A2 2 0 0 1 18 14.16V11a6 6 0 0 0-5-5.92V4a2 2 0 1 0-4 0v1.08A6 6 0 0 0 4 11v3.16c0 .54-.22 1.06-.59 1.44L2 17h5m5 0v1a3 3 0 1 1-6 0v-1h6z"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+                Notifications
+              </a>
+              <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+                  <path d="M12 4v16m8-8H4" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+                Add Student
+              </a>
+            </nav>
+          </aside>
         </div>
         <div class="lg:col-span-9 md:col-span-8 sm:col-span-9 xl:col-span-9">
             <div class="p-3">
