notification page is complete

--- a/dashboard.html
+++ b/dashboard.html
@@ -22,7 +22,7 @@
     <div class="relative">
       <input type="checkbox" id="dropdown-toggle" class="peer hidden">
       <label for="dropdown-toggle"
-        class="flex items-center gap-2 cursor-pointer bg-blue-100 text-sm rounded-full px-3 py-1.5 hover:bg-blue-200">
+        class="flex items-center gap-2 cursor-pointer bg-blue-500 text-sm rounded-full px-3 py-1.5 hover:bg-blue-200">
         <svg class="w-6 h-6 text-blue-600" fill="currentColor" viewBox="0 0 20 20">
           <path d="M10 10a4 4 0 100-8 4 4 0 000 8zM2 18a8 8 0 0116 0H2z" />
         </svg>
@@ -140,7 +140,7 @@
             </svg>
             Fines
           </a>
-          <a href="#" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
+          <a href="./notification.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500">
             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
               <path
                 d="M15 17h5l-1.41-1.41A2 2 0 0 1 18 14.16V11a6 6 0 0 0-5-5.92V4a2 2 0 1 0-4 0v1.08A6 6 0 0 0 4 11v3.16c0 .54-.22 1.06-.59 1.44L2 17h5m5 0v1a3 3 0 1 1-6 0v-1h6z"
