--- a/leave-record.html
+++ b/leave-record.html
@@ -163,10 +163,10 @@
       <main class=" transition-all duration-300 p-4">
         <div class="flex justify-between items-center mb-6 bg-blue-700 p-5 rounded-lg sm:mt-0">
           <h2 class="text-lg font-bold text-white">Select a Date and Month</h2>
-          <form action="#">
+           <form action="#">
             <input type="date" name="select-date" id="select-date"
               class="flex-shrink-0 border rounded p-2 text-gray-700">
-          </form>
+          </form> 
         </div>
         <div class="bg-white rounded-xl shadow-md p-4 md:p-6">
           <div class="mb-4 flex items-center justify-between flex-wrap gap-2">
@@ -313,5 +313,5 @@
   </div>
 </body>
 <script src="./assets/js/dashboard.js"></script>
-
+<script src="./assets/js/mark-attendance.js"></script>
 </html>
