--- a/reset-password.html
+++ b/reset-password.html
@@ -2,49 +2,44 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="./src/output.css">
-  <title>Reset Password</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sign in</title>
+  <link rel="stylesheet" href="./src/output.css" />
+  <link rel="stylesheet" href="./assets/font-awesome/all.min.css">
 </head>
 
-<body class="min-h-screen flex items-center justify-center bg-gray-100 px-4">
-  <div class="w-full max-w-sm bg-white p-8 h-32 rounded-2xl shadow-lg">
-    <!-- <div class="bg-blue-500"><h2 class="text-2xl text-center mb-6  text-white font-semibold py-2">Change Password</h2></div> -->
-    <!-- <h2 class="text-2xl text-center mb-6 bg-blue-500 text-white font-semibold py-2">Change Password</h2> -->
-    <div class="bg-blue-500 text-white p-6 rounded-t-2xl text-center">
-      <h2 class="text-2xl font-bold">Reset Password</h2>
-      <p class="mt-1 text-sm text-blue-100">
-        We'll send you a link to reset your password
-      </p>
+<body class="bg-gradient-to-r from-blue-100 to-blue-200 min-h-screen flex items-center justify-center px-4">
+  <div class="w-full max-w-md bg-white rounded-2xl shadow-lg overflow-hidden">
+    <div class="bg-gradient-to-r from-blue-600 to-blue-800 p-6 text-center">
+      <h2 class="text-white text-2xl font-bold">Reset Password</h2>
+      <p class="text-blue-100 text-sm mt-1"> We'll send you a link to reset your password</p>
     </div>
-    
-    <form action="" class="space-y-5">
+    <div class="p-6 space-y-4">
       <div>
-        <label for="userId" class="block text-sm font-medium text-gray-700 mb-1">Email</label>
-        <input type="text" id="email" name="email" placeholder="Enter your Email" required
-          class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-orange-500" />
-      </div>
-      <a href="/login" class="text-blue-600 hover:underline flex items-center space-x-1"><i
-          class="fa fa-arrow-left"></i>
-        <span>Back to login</span>
-      </a>
-
-      <!-- <div>
-          <label for="password" class="block text-sm font-medium text-gray-700 mb-1">New Password</label>
-          <input type="password" id="password" name="password" placeholder="Enter your New Password" required
-            class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-orange-500" />
+        <label for="email" class="block text-4x1 font-bold text-gray-700 mb-1">User Email</label>
+        <div class="flex items-center border rounded-lg px-3 py-2">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 text-gray-400 relative right-1" fill="none"
+            viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5">
+            <path stroke-linecap="round" stroke-linejoin="round"
+              d="M15.75 6.75a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0zM4.5 20.25a8.25 8.25 0 0115 0" />
+          </svg>
+          <input type="email" id="email" placeholder="Enter Your User-Email" class="w-full outline-none" />
         </div>
-        <div>
-            <label for="password" class="block text-sm font-medium text-gray-700 mb-1">Confirm Password</label>
-            <input type="password" id="password" name="password" placeholder="Enter your Confirm Password" required
-              class="w-full px-4 py-2 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-orange-500" />
-          </div> -->
-      <button type="submit"
-        class="w-full bg-blue-500 hover:bg-black text-white font-semibold py-2 rounded-xl transition duration-300">Reset
-        Password</button>
-    </form>
+      </div>
+      <div class="flex justify-between items-center text-sm mt-2">
+        <label class="flex items-center space-x-2">
+          <a href="/login" class="text-blue-600 hover:underline flex items-center space-x-1"><i
+              class="fa fa-arrow-left"></i>
+            <span>Back to login</span>
+          </a>
+        </label>
+      </div>
+      <a href="#"
+        class="block text-center w-full bg-gradient-to-r from-blue-600 to-blue-800 text-white font-medium py-2 rounded-lg hover:opacity-90 transition">
+        Reset Password
+      </a>
+    </div>
   </div>
 </body>
 
