dates issue, toast messages

--- a/dashboard.html
+++ b/dashboard.html
@@ -188,7 +188,7 @@
             </a>
           </div>
           <div class="bg-white p-4 rounded-lg shadow text-center hover:shadow-lg">
-            <a href="#">
+            <a href="./fee-structure.html">
               <img src="./assets/images/absent.png" class="float-start  h-12 w-12" alt="">
               <p class="text-sm text-gray-500">Pending fees</p>
               <p class="text-2xl font-bold">237</p>
