--- a/user-profile.html
+++ b/user-profile.html
@@ -305,12 +305,16 @@
           </div>
         </div>
         <div class="mt-5 lg:text-end sm:text-center">
-          <button type="submit" class="bg-blue-600 text-white p-2 rounded-lg ">Generate Password</button>
+          <button id="generateBtn" type="button" class="bg-blue-600 text-white p-2 rounded-lg">
+            Generate Password
+          </button>
         </div>
+        <div id="toast-container" class="fixed top-5 right-5 space-y-2 z-50"></div>
       </div>
     </div>
   </div>
 </body>
 <script src="./assets/js/dashboard.js"></script>
+<script src="./assets/js/user-profile-toast.js"></script>
 
 </html>
