--- a/attendance-record.html
+++ b/attendance-record.html
@@ -94,9 +94,11 @@
               </svg>
             </button>
             <div id="attendanceDropdown" class="hidden flex-col mt-2 bg-blue-800">
-              <a href="./mark-attendence.html" class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Mark
+              <a href="./mark-attendence.html"
+                class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Mark
                 Attendance</a>
-              <a href="./attendance-record.html" class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Attendance
+              <a href="./attendance-record.html"
+                class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Attendance
                 Record</a>
             </div>
           </div>
@@ -118,9 +120,11 @@
               </svg>
             </button>
             <div id="leavesDropdown" class="hidden flex-col mt-2 bg-blue-800">
-              <a href="./leave.html" class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Apply for
+              <a href="./leave.html"
+                class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Apply for
                 Leave</a>
-              <a href="./leave-record.html" class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Leave
+              <a href="./leave-record.html"
+                class="block p-2 text-sm text-white hover:bg-blue-500 rounded w-full text-start">Leave
                 Record</a>
             </div>
           </div>
@@ -147,7 +151,8 @@
             </svg>
             Notifications
           </a>
-          <a href="./add-new-student.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500 focus:bg-blue-700">
+          <a href="./add-new-student.html"
+            class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-500 focus:bg-blue-700">
             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
               <path d="M12 4v16m8-8H4" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
@@ -174,8 +179,11 @@
         <div class="flex justify-between items-center mb-6 bg-blue-700 p-5 rounded-lg sm:mt-0">
           <h2 class="text-lg font-bold text-white">Select a Date and Month</h2>
           <form action="#">
+            <label for="select-date" class="block text-white text-sm mb-1 font-bold">
+              Select Date <span class="text-white font-bold">(mm/dd/yy)</span>
+            </label>
             <input type="date" name="select-date" id="select-date"
-              class="flex-shrink-0 border rounded p-2 text-gray-700">
+              class="flex-shrink-0 border rounded p-2 text-gray-700" />
           </form>
         </div>
         <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 gap-6 bg-gray-100 p-4">
@@ -185,7 +193,8 @@
               <p class="text-2xl font-bold text-gray-900 mt-2">18</p>
             </div>
             <div class="flex items-center justify-center w-12 h-12 bg-green-100 rounded-full">
-              <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+              <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" stroke-width="2"
+                viewBox="0 0 24 24">
                 <path d="M5 13l4 4L19 7" stroke-linecap="round" stroke-linejoin="round" />
               </svg>
             </div>
@@ -207,7 +216,8 @@
               <p class="text-2xl font-bold text-gray-900 mt-2">2</p>
             </div>
             <div class="flex items-center justify-center w-12 h-12 bg-yellow-100 rounded-full">
-              <svg class="w-6 h-6 text-yellow-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+              <svg class="w-6 h-6 text-yellow-500" fill="none" stroke="currentColor" stroke-width="2"
+                viewBox="0 0 24 24">
                 <path d="M12 6v6l4 2" stroke-linecap="round" stroke-linejoin="round" />
                 <circle cx="12" cy="12" r="10" stroke-linecap="round" stroke-linejoin="round" />
               </svg>
@@ -275,10 +285,10 @@
                   <td class="py-3 px-4">10:00 PM</td>
                   <td class="py-3 px-4">2h</td>
                 </tr>
-  
+
                 <tr class="border-b border-gray-200">
                   <td class="py-3 px-4 font-semibold sticky left-0 bg-white z-10">2025-05-01</td>
-                  
+
                   <td class="py-3 px-4">Friday</td>
                   <td class="py-3 px-4">
                     <span
@@ -317,7 +327,7 @@
                   <td class="py-3 px-4">
                     <span
                       class="inline-flex items-center bg-gray-200 text-gray-700 text-xs font-medium px-2 py-1 rounded-full">Off</span>
-  
+
                   </td>
                   <td class="py-3 px-4">09:00 AM</td>
                   <td class="py-3 px-4">05:00 PM</td>
@@ -370,10 +380,10 @@
                   <td class="py-3 px-4">10:00 PM</td>
                   <td class="py-3 px-4">2h</td>
                 </tr>
-  
+
                 <tr class="border-b border-gray-200">
                   <td class="py-3 px-4 font-semibold sticky left-0 bg-white z-10">2025-05-01</td>
-                  
+
                   <td class="py-3 px-4">Friday</td>
                   <td class="py-3 px-4">
                     <span
@@ -412,7 +422,7 @@
                   <td class="py-3 px-4">
                     <span
                       class="inline-flex items-center bg-gray-200 text-gray-700 text-xs font-medium px-2 py-1 rounded-full">Off</span>
-  
+
                   </td>
                   <td class="py-3 px-4">09:00 AM</td>
                   <td class="py-3 px-4">05:00 PM</td>
@@ -465,7 +475,7 @@
                   <td class="py-3 px-4">10:00 PM</td>
                   <td class="py-3 px-4">2h</td>
                 </tr>
-  
+
                 <tr class="border-b border-gray-200">
                   <td class="py-3 px-4 font-semibold sticky left-0 bg-white z-10">2025-05-01</td>
                   <td class="py-3 px-4">Friday</td>
@@ -506,7 +516,7 @@
                   <td class="py-3 px-4">
                     <span
                       class="inline-flex items-center bg-gray-200 text-gray-700 text-xs font-medium px-2 py-1 rounded-full">Off</span>
-  
+
                   </td>
                   <td class="py-3 px-4">09:00 AM</td>
                   <td class="py-3 px-4">05:00 PM</td>
@@ -559,7 +569,7 @@
                   <td class="py-3 px-4">10:00 PM</td>
                   <td class="py-3 px-4">2h</td>
                 </tr>
-  
+
                 <tr class="border-b border-gray-200">
                   <td class="py-3 px-4 font-semibold sticky left-0 bg-white z-10">2025-05-01</td>
                   <td class="py-3 px-4">Friday</td>
@@ -614,5 +624,5 @@
   </div>
 </body>
 <script src="./assets/js/dashboard.js"></script>
-
+<script src="./assets/js/atten-record-date.js"></script>
 </html>
