--- a/leave-record.html
+++ b/leave-record.html
@@ -81,14 +81,15 @@
           <button onclick="toggleDropdown('attendanceDropdown')"
             class="flex items-center justify-between w-full gap-3 p-3 rounded-lg hover:bg-blue-500">
             <div class="flex items-center gap-3">
-              <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
+              <svg class="w-5 h-5 transition-transform duration-300"
+              fill="none" stroke="currentColor" viewBox="0 0 24 24" stroke-width="2">
                 <path
                   d="M8 7V3m8 4V3m-9 8h10m-12 8h14a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2z"
                   stroke-linecap="round" stroke-linejoin="round" />
               </svg>
               Attendance
             </div>
-            <svg class="w-4 h-4 transition-transform" id="attendanceIcon" fill="none" stroke="currentColor"
+            <svg class="w-4 h-4 transition-transform duration-300" id="attendanceIcon" fill="none" stroke="currentColor"
               viewBox="0 0 24 24" stroke-width="2">
               <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
@@ -114,7 +115,7 @@
               </svg>
               Leaves
             </div>
-            <svg class="w-4 h-4 transition-transform" id="leavesIcon" fill="none" stroke="currentColor"
+            <svg class="w-4 h-4 transition-transform duration-300" id="leavesIcon" fill="none" stroke="currentColor"
               viewBox="0 0 24 24" stroke-width="2">
               <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" />
             </svg>
@@ -167,16 +168,13 @@
             <input type="date" name="select-date" id="select-date"
               class="flex-shrink-0 border rounded p-2 text-gray-700">
           </form> -->
-           <form action="#">
+          <form action="#">
             <label for="select-date" class="block text-white text-sm mb-1 font-bold">
               Select Date <span class="text-white font-bold">(mm/dd/yy)</span>
             </label>
-            <input
-              type="date"
-              name="select-date"
-              id="select-date"
-              class="flex-shrink-0 border rounded p-2 text-gray-700"/>
-          </form> 
+            <input type="date" name="select-date" id="select-date"
+              class="flex-shrink-0 border rounded p-2 text-gray-700" />
+          </form>
         </div>
         <div class="bg-white rounded-xl shadow-md p-4 md:p-6">
           <div class="mb-4 flex items-center justify-between flex-wrap gap-2">
@@ -323,5 +321,5 @@
   </div>
 </body>
 <script src="./assets/js/dashboard.js"></script>
-<script src="./assets/js/mark-attendance.js"></script>
+<script src="./assets/js/atten-record-date.js"></script>
 </html>
